examples/fail/unbound_var.uplp
-- test: error { "category": "Parse.unbound_var", "metadata": { "ident": "not_a_bound_identifier" } }
not_a_bound_identifier